--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" id="logo" href="#">Almacen</a>
         <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav" id="menu">
             <li class="nav-item">
               <a class="nav-link" id="init" href="#">Inicio</a>
             </li>
@@ -38,7 +38,8 @@
       </div>
     </nav>
   </header>
-  <main class="main"></main>
+  <main class="main">
+  </main>
   <footer class="footer bg-4 text-center">
     <div class="telefono">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill"
